--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "homepage": "https://shegadev.github.io/goit-react-hw-06-phonebook",
   "dependencies": {
     "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "nanoid": "^4.0.2",
+    "@types/redux-persist": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
